<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TextView
        android:id="@id/mSecondActivityFirstWord"
        android:layout_width="199.0dip"
        android:layout_height="93.0dip"
        android:layout_marginLeft="8.0dip"
        android:layout_marginTop="50.0dip"
        android:layout_marginRight="8.0dip"
        android:layout_marginBottom="5.0dip"
        android:background="@mipmap/ivkcard"
        android:gravity="center"
        android:hint="@string/firstword"
        android:textSize="14.0sp"
        app:layout_constraintBottom_toTopOf="@id/mSecondActivitySecondWord"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@id/mSecondActivitySecondWord"
        android:layout_width="201.0dip"
        android:layout_height="111.0dip"
        android:layout_marginLeft="8.0dip"
        android:layout_marginTop="5.0dip"
        android:layout_marginRight="8.0dip"
        android:layout_marginBottom="5.0dip"
        android:background="@mipmap/ivkcard"
        android:gravity="center"
        android:hint="@string/secondword"
        android:inputType="text"
        android:textSize="14.0sp"
        app:layout_constraintBottom_toTopOf="@id/SecondActivityResult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mSecondActivityFirstWord" />

    <Button
        android:id="@id/SecondActivityResult"
        android:layout_width="wrap_content"
        android:layout_height="58.0dip"
        android:layout_marginLeft="8.0dip"
        android:layout_marginTop="5.0dip"
        android:layout_marginRight="8.0dip"
        android:layout_marginBottom="50.0dip"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mSecondActivitySecondWord"
        app:layout_constraintVertical_bias="0.126" />

    <TextView
        android:id="@id/SecondActivitytimer"
        android:layout_width="91.0dip"
        android:layout_height="36.0dip"
        android:layout_marginLeft="8.0dip"
        android:layout_marginTop="8.0dip"
        android:layout_marginRight="8.0dip"
        android:layout_marginBottom="8.0dip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toEndOf="@id/SecondActivityResult"
        app:layout_constraintTop_toBottomOf="@id/mSecondActivitySecondWord"
        app:layout_constraintVertical_bias="0.014" />
</androidx.constraintlayout.widget.ConstraintLayout>